%% ERD: User, Auth, Skills Domain (Logical)
%% Updated 2026-07-14 (Audit Fix)
%% Note: The database does NOT enforce these relationships via physical Foreign Keys.
%% These are logical, application-enforced relationships.
erDiagram
    users {
        UUID id PK
        VARCHAR username UK
        VARCHAR email UK
        VARCHAR status "active/inactive/suspended"
        VARCHAR system_role "superadmin/system_admin/registered_user"
        UUID current_organization_id FK
        VARCHAR auth_method "google/github"
        VARCHAR avatar_url
        TEXT bio
        VARCHAR phone
        TEXT address
        VARCHAR timezone
        VARCHAR language
        BOOLEAN is_external_contributor
        NUMERIC external_contributor_rating
        INT external_contributor_completed_tasks_count
        JSONB profile_settings
        JSONB trust_data
        JSONB credibility_data
        TIMESTAMPTZ deleted_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    user_oauth_providers {
        UUID id PK
        UUID user_id FK
        VARCHAR provider "google/github"
        VARCHAR provider_id UK
        VARCHAR email
        VARCHAR access_token
        VARCHAR refresh_token
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    remember_me_tokens {
        SERIAL id PK
        UUID tokenable_id FK
        VARCHAR hash
        TIMESTAMPTZ expires_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    skills {
        UUID id PK
        VARCHAR category_code "technology/engineering/soft_skill/delivery"
        VARCHAR display_type "spider_chart/list"
        VARCHAR skill_code UK
        VARCHAR skill_name
        TEXT description
        VARCHAR icon_url
        BOOLEAN is_active
        INT sort_order
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    user_skills {
        UUID id PK
        UUID user_id FK
        UUID skill_id FK
        VARCHAR level_code "beginner~master"
        VARCHAR source "imported/reviewed"
        INT total_reviews
        NUMERIC avg_score
        NUMERIC avg_percentage
        TIMESTAMPTZ last_reviewed_at
        TIMESTAMPTZ last_calculated_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    recruiter_bookmarks {
        UUID id PK
        UUID recruiter_user_id FK
        UUID talent_user_id FK
        TEXT notes
        VARCHAR folder
        SMALLINT rating "1~5"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    user_domain_expertise {
        UUID id PK
        UUID user_id FK
        JSONB tech_stack_frequency
        VARCHAR primary_domain
        INT years_experience
        VARCHAR proficiency_level
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    user_performance_stats {
        UUID id PK
        UUID user_id FK
        TIMESTAMPTZ period_start
        TIMESTAMPTZ period_end
        INT total_tasks_completed
        NUMERIC avg_quality_score
        NUMERIC avg_delivery_score
        NUMERIC trust_score
        NUMERIC credibility_score
        JSONB skill_scores
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    user_work_history {
        UUID id PK
        UUID user_id FK
        UUID task_id FK
        UUID task_assignment_id FK
        UUID organization_id FK
        VARCHAR role_in_task
        TEXT achievements
        JSONB skills_demonstrated
        TIMESTAMPTZ started_at
        TIMESTAMPTZ ended_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    user_profile_snapshots {
        UUID id PK
        UUID user_id FK
        INT version
        VARCHAR snapshot_name
        BOOLEAN is_current
        JSONB profile_data
        JSONB skill_snapshot
        JSONB trust_snapshot
        VARCHAR share_token
        VARCHAR access_level
        TIMESTAMPTZ shared_at
        TIMESTAMPTZ expires_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    user_subscriptions {
        UUID id PK
        UUID user_id FK
        VARCHAR plan "free/pro/enterprise"
        VARCHAR status "active/expired/cancelled"
        TIMESTAMPTZ started_at
        TIMESTAMPTZ expires_at
        BOOLEAN auto_renew
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    %% Logical Relationships
    users ||--o{ user_oauth_providers : "has"
    users ||--o{ remember_me_tokens : "has"
    users ||--o{ user_skills : "develops"
    skills ||--o{ user_skills : "is_developed_by"
    users ||--o{ recruiter_bookmarks : "bookmarks (recruiter)"
    users ||--o{ recruiter_bookmarks : "is_bookmarked (talent)"
    users ||--|| user_domain_expertise : "has"
    users ||--o{ user_performance_stats : "tracks"
    users ||--o{ user_work_history : "records"
    users ||--o{ user_profile_snapshots : "creates"
    users ||--o{ user_subscriptions : "holds"
